# explore-llm-text-classification

./: .gitignore  README.md  api_example.py  pyproject.toml  sermon_tags.py
input_data/: Sunday020225am.txt  Sunday090225pm.txt  Sunday160225pm.txt  Sunday230225am.txt  Wed050225.txt  __init__.py
text_classify/: __init__.py  llms.py  sermon_tags.py  text_classify_example.py
